// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot tests Activity Indicator snapShot 1`] = `
<ActivityIndicator
  animating={true}
  color="blue"
  hidesWhenStopped={true}
  size="large"
/>
`;

exports[`Snapshot tests CoinInfo snapShot 1`] = `
<View
  style={
    Object {
      "backgroundColor": "white",
    }
  }
>
  <View
    style={
      Object {
        "backgroundColor": "#FFFFFF",
        "borderRadius": 8,
        "display": "flex",
        "marginVertical": 6,
        "padding": 8,
      }
    }
  >
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
    >
      <View
        style={
          Object {
            "flex": 1,
            "flexDirection": "row",
          }
        }
      >
        <View
          style={
            Object {
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "flex-start",
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#0A132C",
                "fontSize": 16,
                "fontStyle": "normal",
                "fontWeight": "bold",
              }
            }
          >
            RUNE
             - 
          </Text>
          <Text
            style={
              Object {
                "color": "#0A132C",
                "fontSize": 16,
                "fontStyle": "normal",
                "fontWeight": "bold",
              }
            }
          >
            THORChain
          </Text>
        </View>
        <View
          style={Object {}}
        >
          <Text
            style={
              Object {
                "alignSelf": "flex-end",
                "color": "#6B7280",
                "fontSize": 14,
                "fontStyle": "normal",
              }
            }
          >
            #
            65
          </Text>
        </View>
      </View>
      <View
        style={
          Object {
            "flex": 1,
            "flexDirection": "row",
          }
        }
      >
        <View
          style={
            Object {
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "flex-start",
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#019FB5",
                "fontSize": 24,
                "fontWeight": "normal",
              }
            }
          >
            $ 
            5.85
            <Text
              style={
                Object {
                  "color": "#6B7280",
                  "fontSize": 14,
                  "textAlignVertical": "bottom",
                }
              }
            >
               USD
            </Text>
          </Text>
        </View>
        <View
          style={
            Array [
              Object {
                "flexDirection": "row",
                "justifyContent": "flex-end",
              },
              Object {
                "alignItems": "flex-end",
              },
              Object {
                "backgroundColor": "#FDDCDC",
                "color": "#A50606",
              },
              Object {
                "alignItems": "center",
                "borderRadius": 12,
                "fontSize": 14,
                "fontStyle": "normal",
                "fontWeight": "500",
                "paddingHorizontal": 10,
                "paddingVertical": 2,
              },
            ]
          }
        >
          <View
            style={
              Object {
                "transform": Array [
                  Object {
                    "rotate": "180deg",
                  },
                ],
              }
            }
          >
            <RNSVGSvgView
              bbHeight={12}
              bbWidth={10}
              fill="none"
              focusable={false}
              height={12}
              style={
                Array [
                  Object {
                    "backgroundColor": "transparent",
                    "borderWidth": 0,
                  },
                  Object {
                    "flex": 0,
                    "height": 12,
                    "width": 10,
                  },
                ]
              }
              width={10}
            >
              <RNSVGGroup
                fill={null}
                propList={
                  Array [
                    "fill",
                  ]
                }
              >
                <RNSVGPath
                  clipRule={0}
                  d="M.293 5.707a1 1 0 0 1 0-1.414l4.005-4a1.002 1.002 0 0 1 1.416 0l4.005 4a1 1 0 0 1-1.416 1.414L6.007 3.414V11a1 1 0 0 1-1.001 1 1.002 1.002 0 0 1-1.001-1V3.414L1.709 5.707a1.002 1.002 0 0 1-1.416 0Z"
                  fill={4294130234}
                  fillRule={0}
                  propList={
                    Array [
                      "fill",
                      "fillRule",
                    ]
                  }
                />
              </RNSVGGroup>
            </RNSVGSvgView>
          </View>
          <Text
            style={
              Object {
                "alignItems": "flex-end",
                "justifyContent": "flex-end",
              }
            }
          >
             
            4.8
            %
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Snapshot tests HeaderLeft snapShot 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "row",
        "paddingLeft": 10,
      }
    }
  >
    <RNSVGSvgView
      bbHeight={10}
      bbWidth={6}
      fill="none"
      focusable={false}
      height={10}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          Object {
            "flex": 0,
            "height": 10,
            "width": 6,
          },
        ]
      }
      width={6}
    >
      <RNSVGGroup
        fill={null}
        propList={
          Array [
            "fill",
          ]
        }
      >
        <RNSVGPath
          clipRule={0}
          d="M5.707.293a1 1 0 0 1 0 1.414L2.414 5l3.293 3.293a1 1 0 0 1-1.414 1.414l-4-4a1 1 0 0 1 0-1.414l4-4a1 1 0 0 1 1.414 0Z"
          fill={4278296501}
          fillRule={0}
          propList={
            Array [
              "fill",
              "fillRule",
            ]
          }
        />
      </RNSVGGroup>
    </RNSVGSvgView>
    <Text
      style={
        Object {
          "color": "#019FB5",
          "fontSize": 14,
          "marginLeft": 7,
        }
      }
    >
      
    </Text>
  </View>
</View>
`;

exports[`Snapshot tests Logo snapShot 1`] = `
<Image
  source={
    Object {
      "testUri": "../../../assets/logo.png",
    }
  }
  style={
    Object {
      "height": 26.07,
      "width": 28.53,
    }
  }
/>
`;

exports[`Snapshot tests PrimaryButton snapShot 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#1FC4DB",
      "borderRadius": 6,
      "height": 42,
      "marginTop": 44,
      "width": "100%",
    }
  }
>
  <View
    accessibilityHint="Press this button to start session"
    accessibilityLabel="This is the LogIn button"
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#FFFFFF",
          "fontSize": 16,
          "padding": 9,
          "textAlign": "center",
        }
      }
    >
      Get Started
    </Text>
  </View>
</View>
`;

exports[`Snapshot tests TabNavBar snapShot 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "borderTopColor": "#1FC4DB",
        "justifyContent": "center",
        "paddingTop": 10,
        "width": "100%",
      },
      Object {
        "borderTopWidth": 3,
      },
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "fontSize": 16,
          "fontStyle": "normal",
          "fontWeight": "bold",
        },
        Object {
          "color": "#019FB5",
        },
      ]
    }
  >
    To Do
  </Text>
</View>
`;
